chore: add examples of chain

--- a/langchain_basic.ipynb
+++ b/langchain_basic.ipynb
@@ -43,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1+1 equals 2.\n"
+      "1 + 1 equals 2.\n"
      ]
     }
    ],
@@ -168,14 +168,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q6/2kbg8jyx09ngj0srzvvbd72c0000gn/T/ipykernel_31855/2148753036.py:3: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "/var/folders/q6/2kbg8jyx09ngj0srzvvbd72c0000gn/T/ipykernel_35769/2148753036.py:3: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
       "  chat = ChatOpenAI(temperature=0.0, model='gpt-4o')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x10ced4fb0>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x10ced6630>, model_name='gpt-4o', temperature=0.0, model_kwargs={}, openai_api_key='5f393389-5fc3-4904-a597-dd56e3b00f42:7ggTi5OqYeCqlLm1PmJ9kkAVk69iWuWI', openai_api_base='https://openai.prod.ai-gateway.quantumblack.com/0b0e19f0-3019-4d9e-bc36-1bd53ed23dc2/v1', openai_proxy='')"
+       "ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x112429400>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x11242a9c0>, model_name='gpt-4o', temperature=0.0, model_kwargs={}, openai_api_key='5f393389-5fc3-4904-a597-dd56e3b00f42:7ggTi5OqYeCqlLm1PmJ9kkAVk69iWuWI', openai_api_base='https://openai.prod.ai-gateway.quantumblack.com/0b0e19f0-3019-4d9e-bc36-1bd53ed23dc2/v1', openai_proxy='')"
       ]
      },
      "execution_count": 9,
@@ -257,7 +257,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q6/2kbg8jyx09ngj0srzvvbd72c0000gn/T/ipykernel_31855/1020298081.py:4: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "/var/folders/q6/2kbg8jyx09ngj0srzvvbd72c0000gn/T/ipykernel_35769/1020298081.py:4: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
       "  customer_response = chat(customer_messages)\n"
      ]
     },
@@ -265,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm quite upset that my blender lid came off and splattered my kitchen walls with smoothie. To make matters worse, the warranty doesn't cover the cost of cleaning up my kitchen. I could really use your help right now.\n"
+      "I'm quite upset that my blender lid came off and splattered smoothie all over my kitchen walls. To make matters worse, the warranty doesn't cover the cost of cleaning up my kitchen. I could really use your help right now.\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ahoy, me hearty customer! I be regretful to inform ye that the warranty be not coverin' the cleanin' expenses for yer galley, as it seems ye may have misused yer blender by forgettin' to secure the lid afore startin' it. Alas, such be the way of the seas! Fair winds to ye!\n"
+      "Ahoy, esteemed customer! Alas, the warranty be not coverin' the costs o' cleanin' yer galley, for it seems ye've run afoul by misusin' yer blender. Forgettin' to secure the lid afore settin' sail with the blender be the cause, I'm afraid. May fair winds guide ye in the future! Fare thee well!\n"
      ]
     }
    ],
@@ -542,7 +542,7 @@
       "{\n",
       "\t\"gift\": \"True\",\n",
       "\t\"delivery_days\": \"2\",\n",
-      "\t\"price_value\": \"It's slightly more expensive than the other leaf blowers out there, but I think it's worth it for the extra features.\"\n",
+      "\t\"price_value\": \"['It\\'s slightly more expensive than the other leaf blowers out there, but I think it\\'s worth it for the extra features.']\"\n",
       "}\n",
       "```\n"
      ]
